Added animations to TitleActivity

--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -20,8 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title"
-        android:textSize="30dp"
-        android:layout_centerHorizontal="true"/>
+        android:textSize="30sp"
+        android:fontFamily="serif"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="140dp"/>
 
 
     <TextView
@@ -29,16 +31,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/subtitle"
-        android:textSize="20dp"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-condensed-light"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/titleText"/>
-
-    <ImageView
-        android:id="@+id/fadeOut"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/background_dark"
-        android:visibility="invisible"/>
 
     <Button
         android:id="@+id/titleButton"
@@ -46,6 +42,14 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:text="@string/titlebutton"/>
+        android:text="@string/titlebutton"
+        android:layout_marginBottom="115dp"/>
+
+    <ImageView
+        android:id="@+id/fadeOut"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/background_dark"
+        android:visibility="invisible" />
 
 </RelativeLayout>
