--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#2B6F83</color>
     <color name="colorPrimaryDark">#173E49</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="text_shadow">#7F000000</color>
+    <color name="text_shadow_white">#FFFFFF</color>
+    <color name="text_shadow_gray">#DDDDDD</color>
 </resources>
