--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -51,11 +50,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="125dp"
+        android:layout_marginBottom="10dp"
         android:onClick="launchMenuActivity"
         android:background="@color/button_color"
         android:textColor="@color/text_shadow_white"
-        android:textSize="17dp"
+        android:textSize="17sp"
         android:shadowColor="@color/text_shadow"
         android:shadowDx="3"
         android:shadowDy="3"
