Completed basic implementation of custom ListView.

--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -16,7 +16,7 @@
         android:id="@+id/categoryDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder_text"
+        android:text="placeholder text"
         android:layout_column="1"/>
 
 </GridLayout>
