--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:rowCount="1"
-    android:columnCount="2">
+    android:orientation="horizontal"
+    android:weightSum="100">
 
     <ImageView
         android:id="@+id/categoryPreview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:src="@android:drawable/ic_menu_gallery"/>
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:src="@android:drawable/ic_menu_gallery"
+        android:scaleType="centerInside"
+        android:layout_weight="20"/>
 
     <TextView
         android:id="@+id/categoryDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
         android:text="placeholder text"
-        android:layout_column="1"/>
+        android:layout_weight="80"
+        android:gravity="center_vertical"/>
 
-</GridLayout>
+</LinearLayout>
