--- a/app/src/main/res/anim/fade_in_fromleft.xml
+++ b/app/src/main/res/anim/fade_in_fromleft.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/accelerate_decelerate_interpolator">
+
+    <alpha
+        android:duration="750"
+        android:fromAlpha="0.01"
+        android:toAlpha="1.0" >
+    </alpha>
+
+    <translate
+        android:fromXDelta="-10%p"
+        android:toXDelta="0%p"
+        android:duration="750"/>
 
 </set>
