--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -3,22 +3,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:background="@color/colorPrimary">
 
     <ImageView
         android:id="@+id/categoryPreview"
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:src="@android:drawable/ic_menu_gallery"
-        android:scaleType="centerInside"
-        android:layout_weight="20"/>
+        android:scaleType="fitCenter"
+        android:layout_weight="20"
+        android:layout_marginStart="5dp"/>
 
     <TextView
         android:id="@+id/categoryDescription"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:text="placeholder text"
-        android:layout_weight="80"
-        android:gravity="center_vertical"/>
+        android:text="@string/placeholder_short"
+        android:textSize="20sp"
+        android:textColor="@color/text_shadow_white"
+        android:shadowColor="@color/text_shadow"
+        android:shadowDx="3"
+        android:shadowDy="3"
+        android:shadowRadius="2"
+        android:layout_weight="60"
+        android:gravity="center_vertical"
+        android:paddingStart="5dp"/>
+
+    <ImageView
+        android:id="@+id/chevron"
+        android:src="@android:drawable/ic_media_play"
+        android:scaleType="centerInside"
+        android:alpha="0.3"
+        android:gravity="center"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:layout_weight="20"/>
 
 </LinearLayout>
