Added ArtworkActivity, and link to it from MenuActivity.

--- a/app/src/main/res/layout/artwork_item.xml
+++ b/app/src/main/res/layout/artwork_item.xml
@@ -7,9 +7,9 @@
 
     <ImageView
         android:id="@+id/artworkImage"
-        android:src="@drawable/poseidonbg"
+        android:src="@drawable/sombrathumb"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="60"
         android:scaleType="fitCenter"/>
 
@@ -30,10 +30,10 @@
 
         <TextView
             android:id="@+id/artworkBlurb"
-            android:text="lorem ipsum solor dit amet"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="90"/>
+            android:layout_height="0dp"
+            android:layout_weight="90"
+            android:text="@string/placeholder_long" />
 
     </LinearLayout>
 
