--- a/app/src/main/res/layout/activity_artworks.xml
+++ b/app/src/main/res/layout/activity_artworks.xml
@@ -2,12 +2,19 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="100">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="10"/>
 
     <ListView
         android:id="@+id/artworkList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="90">
     </ListView>
 
 </LinearLayout>
