--- a/app/src/main/res/layout/artwork_item.xml
+++ b/app/src/main/res/layout/artwork_item.xml
@@ -14,6 +14,7 @@
         android:scaleType="fitCenter"/>
 
     <LinearLayout
+        android:id="@+id/textBox"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -26,14 +27,17 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="10"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textAlignment="center"/>
 
         <TextView
             android:id="@+id/artworkBlurb"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="90"
-            android:text="@string/placeholder_long" />
+            android:text="@string/placeholder_long"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"/>
 
     </LinearLayout>
 
