--- a/app/src/main/res/layout/artwork_item.xml
+++ b/app/src/main/res/layout/artwork_item.xml
@@ -2,21 +2,23 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:weightSum="100"
     android:background="@color/colorPrimaryDark">
 
     <ImageView
         android:id="@+id/artworkImage"
         android:src="@drawable/sombrathumb"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="60"
-        android:scaleType="fitCenter"/>
+        android:scaleType="fitCenter"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"/>
 
     <LinearLayout
         android:id="@+id/textBox"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="40">
@@ -29,7 +31,7 @@
             android:textSize="16sp"
             android:textColor="@color/text_shadow_white"
             android:paddingStart="5dp"
-            android:paddingEnd="2dp"
+            android:paddingEnd="5dp"
             android:paddingTop="5dp"
             android:textStyle="italic"/>
 
@@ -39,7 +41,8 @@
             android:layout_height="wrap_content"
             android:text="@string/placeholder_long"
             android:paddingStart="5dp"
-            android:paddingEnd="2dp"
+            android:paddingEnd="5dp"
+            android:paddingBottom="5dp"
             android:textColor="@color/text_shadow_gray"/>
 
     </LinearLayout>
