--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#2B6F83</color>
     <color name="colorPrimaryLight">#3B7C8F</color>
     <color name="colorPrimaryDark">#173E49</color>
+    <color name="colorPrimaryMidDark">#1D4C58</color>
     <color name="colorAccent">#D81B60</color>
     <color name="text_shadow">#7F000000</color>
     <color name="text_shadow_white">#FFFFFF</color>
