--- a/app/src/main/res/layout/activity_artview.xml
+++ b/app/src/main/res/layout/activity_artview.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/artFull"
-        android:background="@color/colorPrimaryDark"
+        android:background="#111111"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 </android.support.constraint.ConstraintLayout>
