--- a/app/src/main/res/values/artworks.xml
+++ b/app/src/main/res/values/artworks.xml
@@ -32,11 +32,11 @@
 
     <!--Beach-->
     <string name="beachTitle">Virginia Beach</string>
-    <string name="beachDescription">Based on the view from a hotel in Virginia beach, not too far from the poseidon statue (That I also painted! Wacko!).</string>
+    <string name="beachDescription">Medium: Acrylic on Canvas\nBased on the view from a hotel in Virginia beach, not too far from the poseidon statue (That I also painted! Wacko!).</string>
 
     <!--Snowfall-->
     <string name="snowfallTitle">Winter</string>
-    <string name="snowfallDescription">A recreation of the work \'Winter\', done by Lawren Harris. I found the combination of colours really captivating.</string>
+    <string name="snowfallDescription">Medium: Acrylic on Canvas\nA recreation of the work \'Winter\', done by Lawren Harris. I found the combination of colours really captivating.</string>
 
 
     <!--DIGITAL-->
